--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 <body style="background-image: url(Images/wrtiting-tools.jpg); background-repeat: no-repeat;
 background-position: center;
   background-size: cover;">
+<header class="header">
+    <a href="index.html">Homework Help</a>
+</header>
 
 
-<!--
-<nav>
-    <a class="navbar" href="Update.html"> Update</a>
-    <a class="navbar" href="About.html"> About Us</a>
+<nav class="navbar">
+    <a  href="Update.html"> Update</a>
+    <a class="active" href="About.html"> About Us</a>
 </nav>
--->
-    <ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#news">News</a></li>
-  <li><a href="#contact">Contact</a></li>
-  <li style="float:right"><a class="active" href="#about">About</a></li>
-</ul>
+
+    <!--<ul>
+  <li><a href="/index.html">Home</a></li>
+  
+  <li><a href="Update.html">Update</a></li>
+  <li style="float:right"><a class="active" href="About.html">About</a></li>
+</ul> -->
 
 
     
 <div id="Box">
 
-<h1> Homework Help </h1> 
+<h1>Welcome to Homework Help </h1> 
 <p> We offer great assignment 24x7, written by experts.</p>
 
 
