--- a/About.html
+++ b/About.html
@@ -3,13 +3,22 @@
 
 <head>
 <meta charset="UTF-8">
-<title>About Us</title>
+<title>Home Page</title>
+<link rel="stylesheet" href="css/home.css">
 </head>
     
-<body>
-    
+<body style="background-image: url(Images/wrtiting-tools.jpg); background-repeat: no-repeat;
+background-position: center;
+  background-size: cover;">
+<header class="header">
+    <a href="index.html">Homework Help</a>
+</header>
 
-<h1> Contact Us</h1>    
+
+<nav class="navbar">
+    <a  href="Update.html"> Update</a>
+    <a class="active" href="About.html"> About Us</a>
+</nav>
 
 </body>
 </html>
