--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 <body style="background-image: url(Images/wrtiting-tools.jpg); background-repeat: no-repeat;
 background-position: center;
-  background-size: contain;">
+  background-size: cover;">
 <header class="header">
     <a href="index.html">Homework Help</a>
 </header>
