--- a/About.html
+++ b/About.html
@@ -3,13 +3,31 @@
 
 <head>
 <meta charset="UTF-8">
-<title>About Us</title>
+<title>Home Page</title>
+<link rel="stylesheet" href="css/home.css">
 </head>
     
-<body>
+<body style="background-color: #984f764a;">
+<header class="header">
+    <a href="index.html">Homework Help</a>
+</header>
+
+
+<nav class="navbar">
+    <a  href="Update.html"> Update</a>
+    <a class="active" href="About.html"> About Us</a>
+</nav>
+ 
+<h1 id="head">About Us<h1>
+
+<div id="about">
+
+<h2>Who am I?</h2>
+    <img src="Images/Shrankz.jpg">
+<p>Hello! I am Shrankhla Gaur, a content writer, who is trying to learn HTML and CSS. This is my personal website. I made it for practice pourpose. If you like it don't forget to click the butoon mentioned below. Thanks, Have a good day!</p>
+
     
 
-<h1> Contact Us</h1>    
-
-</body>
+</div>
+    </body>
 </html>
