--- a/Update.html
+++ b/Update.html
@@ -3,12 +3,19 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Document</title>
+<title>Home Page</title>
+<link rel="stylesheet" href="css/home.css">
 </head>
     
 <body>
+<header class="header">
+    <a href="index.html">Homework Help</a>
+</header>
 
-<h1>Get Updates Here  </h1>    
 
+<nav class="navbar">
+    <a  href="Update.html"> Update</a>
+    <a class="active" href="About.html"> About Us</a>
+</nav>
 </body>
 </html>
