--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     
 <body style="background-image: url(Images/wrtiting-tools.jpg); background-repeat: no-repeat;
 background-position: center;
- background-size: cover; ">
+ background-size: cover; background-color: #c3ab9475; ">
 <header class="header">
-    <a href="index.html">Homework Help</a>
+    <a href="index.html">My Portfolio</a>
 </header>
 
 
@@ -31,16 +31,19 @@ background-position: center;
     
 <div id="Box">
 
-<h1>Welcome to Homework Help </h1> 
-<p> We offer great assignment 24x7, written by experts.</p>
+<h1>Welcome to My Portfolio </h1> 
+<p> This website contains some of my best works.</p>
 
 
 <div id="bar">
  What would you like to search?
 </div>
-<p class="small">Learn Anything Online </p>      
-<p class="small">Served 3000 Students</p> 
-
+<ul>
+  <li><a>Ghost Writing</a></li> 
+    <li><a>1000+ Infographics</a></li>
+    <li><a>SEO-friendly Blogs</a></li>
+    <li><a>Litearature Synopsis</a></li>
+    </ul>
 </div>
 </body>
 </html>
