--- a/Update.html
+++ b/Update.html
@@ -18,6 +18,29 @@
 
 <nav class="navbar">
     <a  href="Update.html"> Update</a>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Neon button
+    </a>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Neon button
+    </a>
+    <a href="#">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Neon button
+    </a>
+    
+    
     <a class="active" href="About.html"> About Us</a>
 </nav>
 </body>
