--- a/index.html
+++ b/index.html
@@ -45,5 +45,12 @@ background-position: center;
     <li><a>Litearature Synopsis</a></li>
     </ul>
 </div>
+    
+<div class="grid-container">
+  <div class="grid-item"><a href="old_page.html"><img src="Images/hair.jpg.png">Project 1: How to Take Care of Damaged Hair</a></div>                       
+  <div class="grid-item"><a href="specs.html"><img src="Images/boyspecs.jfif";width="300px"; height="500px;">Project 2: Tips to Choose Prescription Glasses Online</a></div>
+  <div class="grid-item">3</div>  
+  <div class="grid-item">4</div>
+</div>
 </body>
 </html>
