--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ background-position: center;
     
 <div class="grid-container">
   <div class="grid-item"><a href="old_page.html"><img src="Images/hair.jpg.png">Project 1: How to Take Care of Damaged Hair</a></div>                       
-  <div class="grid-item"><a href="specs.html"><img src="Images/boyspecs.jfif";width="300px"; height="500px;">Project 2: Tips to Choose Prescription Glasses Online</a></div>
-  <div class="grid-item">3</div>  
-  <div class="grid-item">4</div>
+  <div class="grid-item"><a href="specs.html"><img src="Images/2specs.jfif">Project 2: Tips to Choose Prescription Glasses Online</a></div>
+  <div class="grid-item"><a href="Saas.html"><img src="Images/saas1.jfif">Project 3: 3 Reasons Why SaaS Is the Future of Business Process Automation</a></div>  
+  <div class="grid-item"><a href="technology.html"><img src="Images/techno1.jfif">Project 4: Five Key Trends in Data Science and Machine Learning Career in 2020</a></div>
 </div>
 </body>
 </html>
