--- a/old_page.html
+++ b/old_page.html
@@ -5,10 +5,42 @@
     <title>How to Take Care of Damaged Hair</title>
     <script src="javascript/new.js"></script>
     <link rel="stylesheet" href="css/op.css">
+    <link rel="stylesheet" href="css/heading.css"
+          <>
     
 </head>
    <div class="all_back">
 <body>
+    <header class="header">
+    <a href="index.html">My Portfolio</a>
+</header>
+
+
+
+<nav class="navbar">
+    
+    <a class="buttons" href="index.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Home
+    </a>
+    <a class="buttons" href="Update.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Updates
+    </a>
+    <a class="buttons" href="About.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        About Me
+    </a>
+    </nav>
     <br>
     <h1 style="text-align: center; color: white; font-family: sans-serif;"> How to Take Care of Damaged Hair</h1>
     <!-- This is a comment-->
