--- a/specs.html
+++ b/specs.html
@@ -5,10 +5,40 @@
 <meta charset="UTF-8">
 <title>Tips to Choose Prescription Glasses Online</title>
     <link rel="stylesheet" href="css/specs.css">
+    <link rel="stylesheet" href="css/heading.css">
 </head>
     
 <body style="background-color: #000000ba; color: white;">
+ <header class="header">
+    <a href="index.html">My Portfolio</a>
+</header>
 
+
+
+<nav class="navbar">
+    
+    <a class="buttons" href="index.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Home
+    </a>
+    <a class="buttons" href="Update.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Updates
+    </a>
+    <a class="buttons" href="About.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        About Me
+    </a>
+    </nav>
 <h1>Tips to Choose Prescription Glasses Online</h1>
 <br>
     <img src="Images/boyspecs.jfif"; width="700px"; height="500px">
