--- a/technology.html
+++ b/technology.html
@@ -5,9 +5,40 @@
 <meta charset="UTF-8">
 <title>Five Key Trends in Data Science and Machine Learning Career in 2020</title>
     <link rel="stylesheet" href="css/specs.css">
+    <link rel="stylesheet" href="css/heading.css">
 </head>
     
 <body style="background-color: black;">
+     <header class="header">
+    <a href="index.html">My Portfolio</a>
+</header>
+
+
+
+<nav class="navbar">
+    
+    <a class="buttons" href="index.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Home
+    </a>
+    <a class="buttons" href="Update.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        Updates
+    </a>
+    <a class="buttons" href="About.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        About Me
+    </a>
+    </nav>
 <h1>Five Key Trends in Data Science and Machine Learning Career in 2020</h1>
 <p>Data science and machine learning have been in trend in 2019. No doubt, they will continue to be in trend in 2020 as well. Although there have been several job cuts, layoffs, and financial crises across the globe due to COVID-19, still there are few tech jobs that will likely be in high demand. Most of the businesses after the pandemic coronavirus have to adopt a new trend to continue their services. </p>
     <br>
