--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ background-position: center;
 
 <nav class="navbar">
     
-    <a  href="index.html">
+    <a class="buttons" href="index.html">
         <span></span>
         <span></span>
         <span></span>
