--- a/About.html
+++ b/About.html
@@ -86,6 +86,7 @@
 </div>
     
     
-    </body><script src="javascript/about1.js"></script>
+    </body>
+    <script src="javascript/about1.js"></script>
 </html>
 
