--- a/About.html
+++ b/About.html
@@ -26,12 +26,12 @@
         <span></span>
         Home
     </a>
-    <a class="buttons" href="Update.html">
+    <a class="buttons" href="contactme.html">
         <span></span>
         <span></span>
         <span></span>
         <span></span>
-        Updates
+        Contact
     </a>
     <a class="buttons" href="About.html">
         <span></span>
