--- a/About.html
+++ b/About.html
@@ -43,9 +43,12 @@
     </nav>
 
 
-<h1 style="font-size: 40px; color: white; text-align: center;">About Me?</h1>
+<!--<h1 style="font-size: 40px; color: white; text-align: center;">About Me?</h1>-->
      
-    
+    <div class="container">
+    <div class="col-md-offset-1 col-md-10">
+      <h2>About Me<i class="fa fa-paper-plane-o"></i></h2>
+      <div id="map-canvas"></div>
    <!--
   Please note: this code is in no way ready to be used as is in production on your website. It will need to be adapted to be cross browser compliant & accessible. I just wanted to share how one might go about this effect with CSS & JS and no other dependencies
 -->
