--- a/specs.html
+++ b/specs.html
@@ -42,6 +42,9 @@
 <h1>Tips to Choose Prescription Glasses Online</h1>
 <br>
     <img src="Images/boyspecs.jfif"; width="700px"; height="500px">
+    <aside>
+<p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+        </aside>
 <p>Three out of every five persons need glasses to correct the vision to some degree. It means most of us are either born with poor vision or more exposed to screens. So what do we have to do now? Well, buying specs is so easy. All we have to do is pick the right pair of prescription glasses or sunglasses, along with some preventive measures. That is why here are some tips for choosing prescription glasses online: </p>
 <br>
 <h2>Correct Prescription</h2>
