--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="hover panel">
                           <div class="front">
                             <div class="box1">
-                              <img src="Images/2specs.jfif"><p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, </p>
+                              <img src="Images/2specs.jfif"><p class="front_box">The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, </p>
                             </div>
                           </div>
                           <div class="back">
@@ -101,7 +101,7 @@
                         <div class="hover panel">
                           <div class="front">
                             <div class="box1">
-                              <img src="Images/saas2.jfif"; width="500px"; height="165px"><p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions,</p>
+                              <img src="Images/saas2.jfif"; width="500px"; height="165px"><p class="front_box">The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions,</p>
                             </div>
                           </div>
                           <div class="back">
@@ -116,7 +116,7 @@
                         <div class="hover panel">
                           <div class="front">
                             <div class="box1">
-                              <img src="Images/techno1.jfif"><p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, </p>
+                              <img src="Images/techno1.jfif"><p class="front_box">The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, </p>
                             </div>
                           </div>
                           <div class="back">
