--- a/About.html
+++ b/About.html
@@ -49,6 +49,8 @@
     <div class="col-md-offset-1 col-md-10">
       <h2>About Me<i class="fa fa-paper-plane-o"></i></h2>
       <div id="map-canvas"></div>
+        </div>
+        </div>
    <!--
   Please note: this code is in no way ready to be used as is in production on your website. It will need to be adapted to be cross browser compliant & accessible. I just wanted to share how one might go about this effect with CSS & JS and no other dependencies
 -->
